--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p .",
+    "start": "node ./dist/index.js",
+    "dev": "npm run build && npm run start",
     "test": "jest --coverage"
   },
   "repository": {
@@ -12,7 +14,11 @@
     "url": "https://github.com/w666/yakv.git"
   },
   "keywords": [
-    "key-value", "cache", "in-memory", "database", "storage"
+    "key-value",
+    "cache",
+    "in-memory",
+    "database",
+    "storage"
   ],
   "author": "Vasily Martynov",
   "license": "MIT",
@@ -22,9 +28,14 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
+    "@types/supertest": "^6.0.2",
+    "axios": "^1.7.7",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   }
