--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -20,4 +20,4 @@ jobs:
               with:
                   node-version: ${{ matrix.node }}
             - run: npm ci
-            - run: npm run test
+            - run: npm run test:coverage
