--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "tsc -p .",
     "start": "node ./dist/index.js",
     "dev": "npm run build && npm run start",
-    "test": "jest --coverage"
+    "test": "jest --detectOpenHandles",
+    "test:coverage": "jest --coverage --detectOpenHandles"
+
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,7 @@
   "author": "Vasily Martynov",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
